update inspircd config

--- a/arkfuture/config/inspircd/conf/links.conf
+++ b/arkfuture/config/inspircd/conf/links.conf
@@ -2,7 +2,14 @@
 # 官网例子: https://github.com/inspircd/inspircd/blob/insp4/docs/conf/links.example.conf
 
 
-#-#-#-#-#-#-#-#-#-#-#-  服务器链接配置  -#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-  ircService链接配置  -#-#-#-#-#-#-#-#-#-#
+# 定义域名[此项的value需要修改为您的ircService域名(主机名)]
+<define name="ServiceName" value="irc.arkfuture.test">
+
+# sasl Model 需要在modules.conf中手动启用,默认为不启用
+<sasl requiressl="yes"
+      target="&ServiceName;">
+
 <link name="&ServiceName;"
       ipaddr="127.0.0.1"
       port="7000"
@@ -13,3 +20,6 @@
       sendpass="FEhZyMU8DQX3A3MPApTF"
       recvpass="FEhZyMU8DQX3A3MPApTF">
 <uline server="&ServiceName;" silent="yes">
+
+
+#-#-#-#-#-#-#-#-#-#-#-  Server互联配置  -#-#-#-#-#-#-#-#-#-#
