--- a/arkfuture/config/inspircd/conf/modules.conf
+++ b/arkfuture/config/inspircd/conf/modules.conf
@@ -30,7 +30,7 @@
 <module name="classban">
 <module name="clearchan">
 <module name="cloak">
-#<module name="cloak_md5"> 此模块将被弃用
+#<module name="cloak_md5">
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
@@ -83,7 +83,7 @@
 <module name="ircv3_labeledresponse">
 <module name="ircv3_msgid">
 <module name="ircv3_servertime">
-#<module name="ircv3_sts">
+<module name="ircv3_sts">
 <module name="joinflood">
 <module name="kicknorejoin">
 <module name="knock">
@@ -122,6 +122,7 @@
 <module name="redirect">
 <module name="regex_glob">
 <module name="regex_stdlib">
+#<module name="regex_tre">
 <module name="remove">
 <module name="repeat">
 #<module name="restrictchans">
@@ -318,9 +319,11 @@
        awaynotify="yes"
        extendedjoin="yes"
        standardreplies="yes">
+       
 <ctctags allowclientonlytags="yes">
+
 <sts host="*"
-     duration="60d"
+     duration="30d"
      port="6697"
      preload="yes">
 
@@ -358,7 +361,7 @@
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
 
-<mkpasswd operonly="no"> #生成第一次密码后请修改此项
+<mkpasswd operonly="yes">
 
 <pbkdf2 iterations="12288"
         length="32">
@@ -394,9 +397,6 @@
 <rline engine="posix"
        matchonnickchange="no"
        zlineonmatch="no">
-
-<sasl requiressl="yes"
-      target="&ServiceName;">
 
 <securelist exemptregistered="yes"
             showmsg="yes"
@@ -439,9 +439,9 @@
 <wsorigin allow="*">
 <websocket defaultmode="text" 
            nativeping="yes" 
-           proxyranges="*"> 
+           proxyranges=""> 
 
-<xlinedb filename="&ConfPath;/xline.db"
+<xlinedb filename="xline.db"
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
