--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -1,5 +1,5 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# ARKFUTURE配置, !!!!您可以根据您的实际需要而修改!!!!, 此配置为了适配deb官方包而未使用TLS/SSL功能, 此配置始终使用最新发布的INSPIRCD
+# ARKFUTURE配置, 您可以根据您需要而修改
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
 # 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
@@ -14,12 +14,10 @@
 
 # <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
 # 定义路径[无需修改]
-<define name="ConfPath" value="&dir.config;/conf">
-<define name="TxtPath" value="&dir.config;/txt">
+<define name="ConfPath" value="conf">
+<define name="TxtPath" value="txt">
 # 定义域名[此项的value需要修改为您的ircServer域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
-# 定义域名[此项的value需要修改为您的ircService域名(主机名)]
-<define name="ServiceName" value="irc.arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -41,6 +39,33 @@
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       type="clients">
+
+<bind port="6697"
+      type="clients"
+      sslprofile="Clients">
+
+<bind port="8097"
+      type="clients"
+      sslprofile="Websocket"
+      hook="websocket">
+
+<bind port="7000" 
+      type="servers"
+      sslprofile="Servers">
+
+#<bind address="127.0.0.1"
+#      port="6665"      #Gateway
+#      type="clients">
+
+#<bind address="127.0.0.1"
+#      port="29583"     #Haproxy
+#      type="clients"
+#      hook="haproxy">
+
+#<bind address="127.0.0.1"
+#      port="29584"     #Haproxy
+#      type="servers"
+#      hook="haproxy">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -73,6 +98,16 @@
          modes="+iw"
          motd="motd"
          requiressl="yes">
+
+<connect name="Gateway"
+         parent="Main"
+         allow="*"
+         modes="+iwx"
+         motd="motd"
+         port="6665"
+         usednsbl="no"
+         useident="no"
+         webirc="webirc">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
@@ -122,18 +157,18 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
 # <security>标签定义了与服务器安全相关的设置选项.此标签只能定义一次.
 <security announceinvites="dynamic"
-          customversion="ARKFUTURE-NET"
+          customversion="ARKFUTURE"
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. "
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-          hideserver="AFE.NET"
+          hideserver="AFE.IRC"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
           runasgroup=""
           runasuser=""
           userstats="Pu"
-          maphide="">
+          maphide="HTTPS://arkfuture.github.io/#irc">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
