--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -13,16 +13,13 @@
 <path configdir="&dir.config;">
 
 # <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
-# 定义路径[无需修改]
 <define name="ConfPath" value="conf">
 <define name="TxtPath" value="txt">
-# 定义域名[此项的value需要修改为您的ircServer域名(主机名)]
-<define name="HostName" value="irc.arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
-<server name="&HostName;"
+<server name="irc.arkfuture.test"
         description="ARKFUTURE-NET IRC Server"
         network="ARKFUTURE"
         id="0AF">
