--- a/arkfuture/config/anope/nickserv.conf
+++ b/arkfuture/config/anope/nickserv.conf
@@ -19,7 +19,7 @@ service
 	/*
 	 * NickServ 客户端的主机名.
 	 */
-	host = "services.host" 
+	host = "AFE.ircSERVICE" 
  
 	/*
 	 * NickServ 客户端的真实姓名.
@@ -70,14 +70,14 @@ module
 	/*
 	 * 要求用户在更改邮箱时验证新邮箱的所有权.
 	 */
-	confirmemailchanges = no
+	confirmemailchanges = yes
  
 	/*
 	 * 用户使用未注册昵称连接时发送的消息. %n 会被替换为用户昵称.
 	 *
 	 * 此指令为可选.
 	 */
-	unregistered_notice = "Your nickname is not registered(您未注册). To register it, use: /msg NickServ REGISTER password email(若注册请使用命令: /msg NickServ REGISTER 您的密码 您的邮箱)"
+	unregistered_notice = "Your nickname is not registered(您未注册). To register it, use(使用注册命令): /msg NickServ REGISTER password email"
  
 	/*
 	 * 新注册昵称的默认选项. 注意: 修改这些选项不影响已注册昵称. 列表必须以空格分隔.
@@ -115,7 +115,7 @@ module
 	 *
 	 * 此指令可选但建议设置. 未设置时默认为 21 天.
 	 */
-	expire = 90d 
+	expire = 30d 
  
 	/*
 	 * 禁止服务管理员对其他服务管理员使用 ACCESS, CERT(不含 LIST 子命令), DROP, FORBID, SUSPEND, GETPASS 和 SET PASSWORD 命令.
@@ -162,7 +162,7 @@ module
 	 * 服务需占用昵称时, 创建的伪用户所用的用户名(及可选的主机名).
 	 */
 	enforceruser = "enforcer"
-	enforcerhost = "services.host" 
+	enforcerhost = "AFE.ircSERVICE" 
  
 	/*
 	 * 服务占用昵称的时长.
