--- a/arkfuture/config/anope/services.conf
+++ b/arkfuture/config/anope/services.conf
@@ -21,7 +21,7 @@ uplink
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#
 serverinfo
 {
-	name = "irc.arkfuture.test"
+	name = "ircservice.arkfuture.test"
 	description = "ARKFUTURE-NET IRC Services"
 	#localhost = "nowhere."
 	id = "00A"
