--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -37,18 +37,18 @@
 <bind port="6667,6668,6669"
       type="clients">
 
-<bind port="6697"
-      type="clients"
-      sslprofile="Clients">
+#<bind port="6697"
+#      type="clients"
+#      sslprofile="Clients">
 
-<bind port="8097"
-      type="clients"
-      sslprofile="Websocket"
-      hook="websocket">
+#<bind port="8097"
+#      type="clients"
+#      sslprofile="Websocket"
+#      hook="websocket">
 
-<bind port="7000" 
-      type="servers"
-      sslprofile="Servers">
+#<bind port="7000" 
+#      type="servers"
+#      sslprofile="Servers">
 
 #<bind address="127.0.0.1"
 #      port="6665"      #Gateway
