--- a/arkfuture/config/inspircd/conf/helpop.conf
+++ b/arkfuture/config/inspircd/conf/helpop.conf
@@ -253,3 +253,459 @@ Y   连接类型权限配置
 O   管理员类型与可操作模式  
 G   按国家统计本地用户分布  
 ">
+
+<helptopic key="squery" title="/SQUERY <target> :<message>" value="
+向 <target> 指定的网络服务发送消息.">
+
+<helptopic key="servlist" title="/SERVLIST [<nick> [<oper-type>]]" value="
+列出当前连接到网络且对您可见的网络服务.可选的基于通配符的 nick 与 oper-type 参数用于匹配网络服务的昵称与操作员类型.
+">
+
+<helptopic key="sslinfo" title="/SSLINFO [<chan>|<nick>]" value="
+若指定频道,则显示该频道中用户的 TLS 连接信息.
+若指定用户,则显示该用户的 TLS 连接与证书信息.
+若未指定目标,则显示执行者自身的 TLS 连接与证书信息.
+">
+
+<helptopic key="uninvite" title="/UNINVITE <nick> <channel>" value="
+取消对某用户的频道邀请,语法同 INVITE.
+">
+
+<helptopic key="tban" title="/TBAN <channel> <duration> <banmask>" value="
+设置定时封禁.时长可写成 1y2w3d4h5m6s 格式,表示一年两周三天四小时五分钟六秒,所有字段可选;也可直接写秒数.定时封禁会像普通封禁一样出现在封禁列表中,可在到期前安全移除.
+">
+
+<helptopic key="dccallow" title="/DCCALLOW [(+|-)<nick> [<time>]]|[LIST|HELP]" value="
+/DCCALLOW - 列出允许 DCC 的昵称
+/DCCALLOW LIST - 同样列出允许 DCC 的昵称
+/DCCALLOW +<nick> [<duration>] - 添加昵称
+/DCCALLOW -<nick> - 移除昵称
+/DCCALLOW HELP - 显示帮助
+
+时长可选,可用秒数或 1y2w3d4h5m6s 格式,含义同上.
+">
+
+<helptopic key="accept" title="/ACCEPT *|(+|-)<nick>[,(+|-)<nick>]+" value="
+管理您的接受列表.该列表用于在您设置了用户模式 +g 时决定谁可以给您发私信.
+
+/ACCEPT * - 列出已接受的昵称
+/ACCEPT +<nick> - 添加昵称
+/ACCEPT -<nick> - 移除昵称
+
+可一次操作多个昵称,例如:
+/ACCEPT +<nick>,-<nick>,+<nick>
+">
+
+<helptopic key="cycle" title="/CYCLE <channel> [:<reason>]" value="
+循环进出频道(先离开后重新加入),可绕过用户限制与频道密钥等阻止新用户加入的限制.
+">
+
+<helptopic key="title" title="/TITLE <username> <password>" value="
+使用指定用户名与密码进行 WHOIS 标题行以及可选的虚拟主机认证.
+">
+
+<helptopic key="watch" title="/WATCH C|L|l|S|(+|-)<nick> [(+|-)<nick>]+" value="
+/WATCH         - 列出在线的被监视昵称
+/WATCH l       - 列出在线的被监视昵称
+/WATCH L       - 列出所有被监视昵称,含离线
+/WATCH C       - 清空被监视昵称列表
+/WATCH S       - 显示统计信息
+/WATCH +<nick> - 添加昵称
+/WATCH -<nick> - 移除昵称
+
+可一次操作多个昵称,例如:
+/WATCH +<nick> -<nick> +<nick>
+">
+
+<helptopic key="monitor" title="/MONITOR C|L|S|(+|-) <nick>[,<nick>]+" value="
+/MONITOR L        - 列出所有被监视昵称,不区分在线离线
+/MONITOR C        - 清空被监视昵称列表
+/MONITOR S        - 列出所有被监视昵称并标明在线/离线
+/MONITOR + <nick> - 添加昵称
+/MONITOR - <nick> - 移除昵称
+
+可一次操作多个昵称,例如:
+/MONITOR + <nick>,<nick>,<nick>
+/MONITOR - <nick>,<nick>,<nick>
+">
+
+<helptopic key="vhost" title="/VHOST <username> <password>" value="
+使用指定用户名与密码进行虚拟主机认证.
+">
+
+<helptopic key="remove" title="/REMOVE <channel> <nick> [:<reason>]" value="
+将指定用户从指定频道移除.您至少需为频道半操作员.被移除用户将看到被谁移除的提示消息.
+">
+
+<helptopic key="rmode" title="/RMODE <channel> <mode> [<pattern>]" value="
+从指定频道移除列表类与前缀类模式.若给出 pattern,则所有匹配该 pattern 的模式都会被移除.若移除列表模式且 pattern 是在线用户的昵称,则所有匹配该用户的列表项都会被移除.
+">
+
+<helptopic key="hexip" title="/HEXIP <hex-ip|raw-ip>" value="
+若参数为原始 IP 地址,则返回其十六进制编码形式(如同由用户名网关发送);若为十六进制编码 IP,则返回等效原始 IP 地址.
+">
+
+<helptopic key="silence" title="/SILENCE [(+|-)<mask> [CcdiHNnPpTtx]]" value="
+对给定 n!u@h 掩码的服务端忽略.若提供可选标志字段,则需包含一个或多个标志,指定要拦截的消息类型及方式.
+
+/SILENCE - 显示被静默的掩码列表
+/SILENCE +<mask> [<flags>] - 添加掩码
+/SILENCE -<mask> - 移除掩码
+
+有效的 SILENCE 标志
+-------------------
+ C    匹配对用户的 CTCP
+ c    匹配对频道的 CTCP
+ d    默认行为,等同于 CciNnPpTt
+ H    隐藏消息内容而非拦截
+ i    匹配频道邀请
+ N    匹配对用户的 NOTICE
+ n    匹配对频道的 NOTICE
+ P    匹配对用户的 PRIVMSG
+ p    匹配对频道的 PRIVMSG
+ T    匹配对用户的 TAGMSG
+ t    匹配对频道的 TAGMSG
+ x    使该掩码免于静默规则
+
+可任意组合标志.
+">
+
+<helptopic key="knock" title="/KNOCK <channel> :<reason>" value="
+向频道发送通知,表示您希望加入.
+">
+
+<helptopic key="user" title="/USER <username> <unused> <unused> :<realname>" value="
+该命令由客户端用于注册 IRC 会话,向服务器提供用户名与真实姓名.在已建立连接后不应手动使用.
+">
+
+<helptopic key="nick" title="/NICK <newnick>" value="
+将您的昵称更改为 <newnick>.
+">
+
+<helptopic key="quit" title="/QUIT [:<message>]" value="
+退出 IRC 并结束当前会话.
+">
+
+<helptopic key="version" title="/VERSION [<servername>]" value="
+返回服务器版本信息.
+">
+
+<helptopic key="ping" title="/PING <cookie> [<servername>]" value="
+Ping 服务器,服务器将用 PONG 回应.
+">
+
+<helptopic key="pong" title="/PONG <cookie> [<servername>]" value="
+客户端应使用此命令回应服务器的 PING,不应手动发出.
+">
+
+<helptopic key="prop" title="/PROP <target> [(+|-)<name> [<value>]]+" value="
+允许用户对指定目标添加、移除与查看属性.
+">
+
+<helptopic key="admin" title="/ADMIN [<servername>]" value="
+显示给定服务器的管理员信息.
+">
+
+<helptopic key="privmsg" title="/PRIVMSG <target>[,<target>]+ :<message>" value="
+向 <target> 指定的用户或频道发送消息.
+">
+
+<helptopic key="notice" title="/NOTICE <target>[,<target>]+ :<message>" value="
+向 <target> 指定的用户或频道发送通知.
+">
+
+<helptopic key="join" title="/JOIN <channel>[,<channel>]+ [<key>[,<key>]+]" value="
+加入您提供名称的一个或多个频道.
+">
+
+<helptopic key="names" title="/NAMES [<channel>[,<channel>]+]" value="
+返回您提供的频道上的用户列表.
+">
+
+<helptopic key="part" title="/PART <channel>[,<channel>]+ [:<reason>]" value="
+离开您指定的一个或多个频道.
+">
+
+<helptopic key="kick" title="/KICK <channel> <nick>[,<nick>]+ [:<reason>]" value="
+将用户从您指定的频道踢出.您至少需为频道半操作员.
+">
+
+<helptopic key="topic" title="/TOPIC <channel> [:<topic>]" value="
+设置或获取频道主题.若命令中给出主题且频道非 +t 或您至少为半操作员,则频道主题将被更改为您提供的新主题.
+">
+
+<helptopic key="who" title="/WHO <pattern> [<flags>][%[<fields>[,<querytype>]]] <pattern>" value="
+查找与所提供模式匹配的用户信息.可指定标志特定模式、频道名、用户主机名、用户服务器名、用户真实姓名或用户昵称.匹配用户仅在以下情况出现在 WHO 响应中:
+ 1) 模式为无私人或秘密频道模式的精确频道名且用户无隐身用户模式.
+ 2) 模式为精确昵称.
+ 3) 您与该用户共享一个或多个频道.
+ 4) 用户无隐身用户模式.
+ 5) 您是具有 users/auspex 特权的服务器操作员.
+
+若指定任何字段,则返回 WHOX 响应而非 RFC 1459 WHO 响应.
+(以下大量 WHO 标志与字段说明省略,与原文对应,仅将中文符号替换为英文)
+">
+
+<helptopic key="motd" title="/MOTD [<servername>]" value="
+显示 <server> 的今日消息,通常包含重要服务器规则与通告,使用前应阅读.
+">
+
+<helptopic key="oper" title="/OPER <username> [<password>]" value="
+尝试认证为服务器操作员.无论成功或失败,操作尝试都会被记录并发送给在线服务器操作员.
+">
+
+<helptopic key="list" title="/LIST [<pattern>]" value="
+创建与 glob 模式 <pattern> 匹配的所有现有频道列表,例如 *chat* 或 bot*.
+">
+
+<helptopic key="lusers" title="/LUSERS" value="
+显示本地与远程用户、服务器与频道的计数.
+">
+
+<helptopic key="userhost" title="/USERHOST <nick> [<nick]>+" value="
+返回用户的主机名、昵称及其他杂项信息.
+">
+
+<helptopic key="away" title="/AWAY [:<message>]" value="
+若给出消息,则将您标记为离开,否则移除您的离开状态及之前消息.
+">
+
+<helptopic key="ison" title="/ISON <nick> [<nick]>+" value="
+返回您给出的昵称子集,仅显示当前在线的昵称.
+">
+
+<helptopic key="invite" title="/INVITE [<nick> <channel> [<time>]]" value="
+邀请用户加入频道.若频道非 +A,仅频道半操作员及以上可邀请;若 +A 被设置,任何成员均可邀请.被邀请用户可绕过封禁、+k 等限制.若提供时间,邀请将在该时间后过期.时间格式可为 1y2w3d4h5m6s 或秒数.无参数时列出您收到的待处理邀请.
+">
+
+<helptopic key="pass" title="/PASS <password>" value="
+该命令由客户端在建立 IRC 会话时用于向服务器提交服务器密码.在已建立连接后不应手动使用.
+">
+
+<helptopic key="whowas" title="/WHOWAS <nick> [<count>]" value="
+返回用户最近出现在 IRC 的时间列表及最后出现时间与所在服务器.若给出 <count>,则仅返回最近 <count> 条记录.
+">
+
+<helptopic key="links" title="/LINKS" value="
+显示所有已链接的服务器.
+">
+
+<helptopic key="map" title="/MAP" value="
+以树形图形式从您所在服务器视角展示网络中所有用户与服务器及其链接关系.
+">
+
+<helptopic key="whois" title="/WHOIS [<servername>] <nick>[,<nick]>+" value="
+返回用户的 WHOIS 信息,包括其频道、主机名等.若提供 servername,则从用户实际所在服务器执行 whois,可显示空闲与登录时间.
+">
+
+<helptopic key="time" title="/TIME [<servername>]" value="
+返回服务器本地时间,或另一服务器的远程时间.
+">
+
+<helptopic key="info" title="/INFO [<servername>]" value="
+返回使该 IRC 服务器得以实现的开发者与支持者信息.
+">
+
+<helptopic key="setname" title="/SETNAME :<realname>" value="
+将您的真实姓名设置为指定值.
+">
+
+<helptopic key="tline" title="/TLINE <mask>" value="
+该命令返回本地与全局匹配客户端数量、匹配百分比及匹配方式(通过 IP 或主机名).掩码应为 nick!user@host 或 user@IP 格式,支持通配符与 CIDR 块.
+">
+
+<helptopic key="filter" title="/FILTER <pattern> [<action> <flags> [<duration>] :<reason>]" value="
+当给出多于一个参数时,该命令添加全局过滤器,对由 flags 指定类型且匹配 pattern 的消息执行给定动作、时长与原因.过滤器在消息发送到服务器且匹配时生效.动作与标志列表与原文对应,仅将中文符号替换为英文.(以下省略详细列表,与原文一一对应)
+">
+
+<helptopic key="ojoin" title="/OJOIN <channel>" value="
+强制加入指定频道,并获得 +Y 及其他配置定义的模式,防止被踢.根据配置可能发布官方业务通告.
+">
+
+<helptopic key="check" title="/CHECK <nick>|<ipmask>|<hostmask>|<channel> [<servername>]" value="
+允许操作员以类似 WHO 但更详细的方式查询昵称、IP、主机掩码或频道的高级信息,显示服务器存储的大多数元数据.若给出第二个参数,则在指定服务器远程执行命令.
+">
+
+<helptopic key="alltime" title="/ALLTIME" value="
+显示网络中所有服务器的日期与时间.
+">
+
+<helptopic key="rconnect" title="/RCONNECT <remote-server-mask> <target-server-mask>" value="
+使匹配 <remote-server-mask> 的服务器尝试连接到配置文件中第一个匹配 <target-server-mask> 的服务器.
+">
+
+<helptopic key="rsquit" title="/RSQUIT <target-server-mask> [:<reason>]" value="
+使匹配 <target-server-mask> 的远程服务器与网络断开连接.
+">
+
+<helptopic key="globops" title="/GLOBOPS :<message>" value="
+向所有拥有 +g 通知掩码的用户发送消息.
+">
+
+<helptopic key="cban" title="/CBAN <channelmask> [[<duration>] :<reason>]" value="
+设置或移除全局基于频道的封禁.添加封禁需至少两个参数,移除封禁只需一个参数(仅频道掩码).时长格式可为秒或 1y2w3d4h5m6s.
+">
+
+<helptopic key="sajoin" title="/SAJOIN [<nick>] <channel>[,<channel]>+" value="
+强制用户加入频道.若未给出昵称,则对执行命令的操作员生效.
+">
+
+<helptopic key="sapart" title="/SAPART <nick> <channel>[,<channel]>+ [:<reason>]" value="
+强制用户离开频道,可给出可选原因.
+">
+
+<helptopic key="samode" title="/SAMODE <target> (+|-)<modes> [<mode-parameters>]" value="
+对指定频道或昵称应用给定模式更改.
+">
+
+<helptopic key="sanick" title="/SANICK <nick> <newnick>" value="
+将用户昵称更改为新昵称.
+">
+
+<helptopic key="sakick" title="/SAKICK <channel> <nick> [:<reason>]" value="
+将给定用户从指定频道踢出,可给出可选原因.
+">
+
+<helptopic key="satopic" title="/SATOPIC <channel> :<topic>" value="
+将给定主题应用到指定频道.
+">
+
+<helptopic key="saquit" title="/SAQUIT <nick> :<reason>" value="
+强制用户以指定原因退出.
+">
+
+<helptopic key="setidle" title="/SETIDLE <duration>" value="
+将您的空闲时间设置为指定值.时间格式可为 1y2w3d4h5m6s 或秒数.
+">
+
+<helptopic key="sethost" title="/SETHOST <host>" value="
+将您的主机设置为指定值.
+">
+
+<helptopic key="setident" title="/SETIDENT <username>" value="
+将您的用户名设置为指定值.
+">
+
+<helptopic key="swhois" title="/SWHOIS <nick> :<swhois>" value="
+将用户的 swhois 字段设为给定消息,该消息将在 /WHOIS 中可见.要移除消息,使用 /SWHOIS <nick> :
+">
+
+<helptopic key="mkpasswd" title="/MKPASSWD <hashtype> <plaintext>" value="
+将明文编码为指定类型的哈希并显示结果.
+">
+
+<helptopic key="opermotd" title="/OPERMOTD [<servername>]" value="
+显示操作员 MOTD.
+">
+
+<helptopic key="nicklock" title="/NICKLOCK <nick> <newnick>" value="
+将用户昵称更改为新昵称,并强制其在会话剩余时间内保持该昵称.
+">
+
+<helptopic key="nickunlock" title="/NICKUNLOCK <nick>" value="
+允许先前被锁定的用户再次更改昵称.
+">
+
+<helptopic key="chghost" title="/CHGHOST <nick> <host>" value="
+将用户主机更改为指定主机.
+">
+
+<helptopic key="chgname" title="/CHGNAME <nick> :<realname>" value="
+将用户真实姓名更改为指定值.
+">
+
+<helptopic key="chgident" title="/CHGIDENT <nick> <username>" value="
+将用户名更改为指定值.
+">
+
+<helptopic key="shun" title="/SHUN <nick!user@host>[,<nick!user@host]>+ [[<duration>] :<reason>]" value="
+设置或移除对 nick!user@host 掩码的全局忽略(Shun).添加需至少两个参数,移除只需一个参数(仅掩码).时长格式同上.
+">
+
+<helptopic key="die" title="/DIE <servername>" value="
+关闭本地服务器,所需单个参数必须与本地服务器名称匹配.
+">
+
+<helptopic key="restart" title="/RESTART <servername>" value="
+重启本地服务器,所需单个参数必须与本地服务器名称匹配.
+">
+
+<helptopic key="commands" title="/COMMANDS" value="
+显示所有当前可用命令.
+">
+
+<helptopic key="kill" title="/KILL <nick>[,<nick]>+ :<reason>" value="
+以给定原因将用户从 IRC 断开.
+">
+
+<helptopic key="rehash" title="/REHASH [<servermask>]" value="
+使服务器配置文件被重新读取并为匹配服务器掩码的所有服务器重新初始化值,若未指定则针对本地服务器.
+">
+
+<helptopic key="connect" title="/CONNECT <servermask>" value="
+添加与匹配给定服务器掩码的服务器的连接,必须在配置文件中预先配置该服务器.
+">
+
+<helptopic key="squit" title="/SQUIT <servermask>" value="
+将匹配给定服务器掩码的服务器从本服务器断开.
+">
+
+<helptopic key="modules" title="/MODULES [<servername>]" value="
+列出当前已加载模块、内存偏移、版本号与标志.非操作员将看到简化信息.
+">
+
+<helptopic key="loadmodule" title="/LOADMODULE <modulename>" value="
+将指定模块加载到本地服务器.
+">
+
+<helptopic key="unloadmodule" title="/UNLOADMODULE <modulename>" value="
+从本地服务器卸载模块.
+">
+
+<helptopic key="reloadmodule" title="/RELOADMODULE <modulename>" value="
+在本地服务器卸载并重新加载模块.
+">
+
+<helptopic key="gloadmodule" title="/GLOADMODULE <modulename> [<servermask>]" value="
+在所有链接服务器加载指定模块.
+">
+
+<helptopic key="gunloadmodule" title="/GUNLOADMODULE <modulename> [<servermask>]" value="
+从所有链接服务器卸载模块.
+">
+
+<helptopic key="greloadmodule" title="/GRELOADMODULE <modulename> [<servermask>]" value="
+在所有链接服务器卸载并重新加载模块.
+">
+
+<helptopic key="kline" title="/KLINE <user@host>[,<user@host]>+ [[<duration>] :<reason>]" value="
+设置或移除对 user@host 掩码的 K-line(本地封禁).添加需至少两个参数,移除只需一个参数(仅掩码).时长格式同上.
+">
+
+<helptopic key="zline" title="/ZLINE <ipmask>[,<ipmask]>+ [[<duration>] :<reason>]" value="
+设置或移除对 IP 掩码的 Z-line(全局 IP 封禁).参数要求与时长格式同上.
+">
+
+<helptopic key="qline" title="/QLINE <nickmask>[,<nickmask]>+ [[<duration>] :<reason>]" value="
+设置或移除对昵称掩码的 Q-line(全局昵称封禁).参数要求与时长格式同上.
+">
+
+<helptopic key="gline" title="/GLINE <user@host>[,<user@host]>+ [[<duration>] :<reason>]" value="
+设置或移除对 user@host 掩码的 G-line(全局封禁).参数要求与时长格式同上.
+">
+
+<helptopic key="eline" title="/ELINE <user@host>[,<user@host]>+ [[<duration>] :<reason>]" value="
+设置或移除对 user@host 掩码的 E-line(全局封禁例外).添加需至少三个参数,移除只需一个参数(仅掩码).时长格式同上.存在重要限制:*@<ip> 封禁只能被 *@<ip> 的 E-line 否定,*@<host> 封禁可被 *@<ip> 或 *@<host> 的 E-line 否定,<user>@* 或 <user>@<host> 封禁可被任何匹配的 E-line 否定.
+">
+
+<helptopic key="wallops" title="/WALLOPS :<message>" value="
+向所有 +w 用户发送消息.
+">
+
+<helptopic key="rline" title="/RLINE <regex> [[<duration>] :<reason>]" value="
+设置或移除对 n!u@h\\srealname 掩码的 R-line(全局正则封禁).添加需至少两个参数,移除只需一个参数(仅正则).时长格式同上.
+">
+
+<helptopic key="clearchan" title="/CLEARCHAN <channel> [KILL|KICK|G|Z] [:<reason>]" value="
+将频道内所有非操作员踢出或断开,可选择同时 G/Z-line.用于快速清理机器人频道.默认 KILL 仅断开,G 与 Z 方法还会添加 G/Z-line.受害者不会看到彼此被踢或退出.
+">
