--- a/arkfuture/config/inspircd/conf/links.conf
+++ b/arkfuture/config/inspircd/conf/links.conf
@@ -4,7 +4,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-  ircService链接配置  -#-#-#-#-#-#-#-#-#-#
 # 定义域名[此项的value需要修改为您的ircService域名(主机名)]
-<define name="ServiceName" value="irc.arkfuture.test">
+<define name="ServiceName" value="irc.arkfuture.irc">
 
 # sasl Model 需要在modules.conf中手动启用,默认为不启用
 <sasl requiressl="yes"
