--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -19,7 +19,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
-<server name="irc.arkfuture.test"
+<server name="irc.arkfuture.irc"
         description="ARKFUTURE-NET IRC Server"
         network="ARKFUTURE"
         id="0AF">
