--- a/arkfuture/config/anope/services.conf
+++ b/arkfuture/config/anope/services.conf
@@ -10,7 +10,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#IRCd配置#-#-#-#-#-#-#-#-#-#-#-#
 uplink
 {
-	host = "127.0.0.1"
+	host = "irc.arkfuture.irc"
 	ipv6 = no
 	ssl = no
 	port = 7000
