--- a/arkfuture/config/anope/nickserv.conf
+++ b/arkfuture/config/anope/nickserv.conf
@@ -115,7 +115,7 @@ module
 	 *
 	 * 此指令可选但建议设置. 未设置时默认为 21 天.
 	 */
-	expire = 30d 
+	expire = 100d 
  
 	/*
 	 * 禁止服务管理员对其他服务管理员使用 ACCESS, CERT(不含 LIST 子命令), DROP, FORBID, SUSPEND, GETPASS 和 SET PASSWORD 命令.
@@ -175,14 +175,14 @@ module
 	 * 强制更改用户昵称以执行 "nick kill" 时, 新昵称将以此值为前缀, 后接 6 或 7 位数字.
 	 * 需确保是有效昵称, 且 Nicklen+7 不超过 IRCd 允许的昵称长度.
 	 *
-	 * 此指令可选. 未设置时默认为 "Guest".
+	 * 此指令可选. 未设置时默认为 "guest".
 	 */
-	guestnickprefix = "Guest"
+	guestnickprefix = "guest"
  
 	/*
 	 * 若启用, 服务不允许拥有昵称所有权, 仅允许拥有账户所有权.
 	 */
-	nonicknameownership = no 
+	nonicknameownership = yes 
  
 	/*
 	 * 密码的最大长度.
