--- a/arkfuture/config/anope/nickserv.conf
+++ b/arkfuture/config/anope/nickserv.conf
@@ -161,7 +161,7 @@ module
 	/*
 	 * 服务需占用昵称时, 创建的伪用户所用的用户名(及可选的主机名).
 	 */
-	enforceruser = "enforcer"
+	enforceruser = "nickservice"
 	enforcerhost = "AFE.ircSERVICE" 
  
 	/*
